--- a/css/styles.css
+++ b/css/styles.css
@@ -1,14 +1,127 @@
+
+/* Navbar and title css  */
 #title{
-    background-color: rgb(231, 181, 42);
+    background-color: #ff4c68;
+    color: white;
 }
 
 #title .col-lg-6 h1{
-    font-family: 'Montserrat', sans-serif;
-    font-size: 3rem;
+    font-size: 3.5rem;
     line-height: 1.5;
+    font-weight: 700;
+    
 
 }
 
 .container-fluid{
     padding: 3% 15%
+}
+
+.navbar-brand{
+    font-family: "Ubuntu", sans-serif;
+    font-size: 2.0rem;
+    font-weight: bold;
+}
+
+.nav-item {
+    padding: 0 18px;
+    font-family: 'Monstserrat', sans-serif;
+}
+
+.nav-link{
+    font-size: 1.2rem
+}
+
+
+
+body {
+    font-family: 'Monstserrat', sans-serif;
+}
+
+.navbar{
+    padding: 0 0 4.5rem;
+}
+
+/* Donwload buttons  */
+.download-btn {
+    margin: 5% 3% 5% 0
+}
+
+
+/* Title image */
+.col-lg-6 img{
+    transform: rotate(25deg);
+    width: 60%;
+}
+
+/* ----------------Features Section---------- */
+#features {
+    text-align: center;
+    margin: 7% 15%
+}
+
+#features i{
+    font-size: 300%;
+    color: #ef8172;
+    padding-bottom: 10px;
+}
+
+#features i:hover{
+    color: #ff4c68;
+}
+
+p{
+    color: #8f8f8f;
+}
+
+h3{
+    font-weight: bold;
+    font-size: 1.5rem
+}
+
+/* ----------------Testimonial Section---------- */
+
+#testimonials {
+    text-align: center;
+    background-color: #ef8172 ;
+    color: #fff;
+}
+
+h2 {
+    font-family: 'Monstserrat', sans-serif;
+    font-weight: bold;
+    font-size: 3rem;
+    line-height: 1.5;
+}
+
+.testimonial-image{
+    width: 10%;
+    border-radius: 100%;
+    margin: 20px
+}
+
+#press {
+    background-color: #ef8172 ;
+    text-align: center;
+    padding-bottom: 3%;
+}
+
+.press-logo {
+    width: 15%;
+    margin: 20px 20px 50px;
+}
+
+.carousel-item{
+    padding: 7% 15%;
+}
+
+/* -----------------Pricing Section ---------- */
+
+#pricing {
+    padding: 100px;
+    text-align: center;
+}
+
+.pricing-column{
+    padding: 3% 2%
 }
