--- a/css/styles.css
+++ b/css/styles.css
@@ -14,7 +14,7 @@
 }
 
 .container-fluid{
-    padding: 3% 15%
+    padding: 3% 15% 7%
 }
 
 .navbar-brand{
@@ -49,15 +49,21 @@ body {
 
 
 /* Title image */
-.col-lg-6 img{
+.title-image{
     transform: rotate(25deg);
     width: 60%;
+    position: absolute;
+    right: 30%
+
 }
 
 /* ----------------Features Section---------- */
 #features {
     text-align: center;
-    margin: 7% 15%
+    padding: 7% 15%;
+    position: relative;
+    z-index: 1; 
+    background-color: white;
 }
 
 #features i{
@@ -124,4 +130,44 @@ h2 {
 
 .pricing-column{
     padding: 3% 2%
+}
+
+
+/*----------- Media Query------------- */
+@media (max-width: 1028px){
+    .title-image{
+        position: static;
+        transform: rotate(0)
+    }
+
+    #title {
+        position: static;
+        text-align: center;
+    }
+}
+
+/*----------- Call to Action Section----------  */
+#cta {
+    background-color: #ff4c68;
+    text-align: center;
+    padding: 7% 15%;
+    color: #fff;
+    
+}
+
+#cta h3{
+    font-weight: bold;
+    font-size: 3.5rem;
+    line-height: 1.5;
+
+}
+
+/*------------- Footer-------------------- */
+#footer {
+    padding: 7% 15%;
+    text-align: center;
+}
+
+#footer i{
+    margin: 0px 7px 20px 7px
 }
